# nrf52840dk

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: lib.rs  main.rs
