[package]
name = "blesf"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nrf-softdevice-s140 = { version = "0.1.1", path = "./nrf-softdevice-s140" }
nrf52840-hal = "0.15.1"
